# stdio-override

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: ffi.rs  lib.rs  macros.rs  stdout.rs  unix.rs  windows.rs
