[package]
name = "stdio-override"
version = "0.1.3"
license = "MIT/Apache-2.0"
authors = ["elichai2 <elichai.turkel@gmail.com>"]
repository = "https://github.com/elichai/stdio-override"
readme = "README.md"
edition = "2018"
description = "Rust library for overriding Stdin/Stdout/Stderr with a different File Descriptor"
categories = ["os::unix-apis", "development-tools::debugging"]
keywords = ["unix", "sockets", "fd", "file", "io"]


[dependencies]
doc-comment = { version = "0.3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
os_pipe = "0.9.2"

[features]
test-readme =  ["doc-comment"]

[badges]
travis-ci = { repository = "elichai/log-derive" }
